# pong

./: .clang-format  .clangd  .cmake-format.py  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/shaders/: CMakeLists.txt
assets/shaders/src/: simple.frag  simple.vert
notes/: big to-dos.md  copilot_chat.md  error-handling-policy.md  lighting.md  next to-dos.md  notes.md  pipeline.md  render-context-notes.md  vulkan_project_structure.txt
src/: CMakeLists.txt  pong.cpp
src/core/: CMakeLists.txt  entity.cpp  entity.h  resource_handles.h  resource_traits.h  scene.cpp  scene.h
src/engine/: CMakeLists.txt  engine_error.h  engine_types.h  file.cpp  file.h  gpu_buffer.cpp  imgui_wrapper.h  render_context.cpp  render_context.h  resource_loader.cpp  resource_loader.h  resource_manager.cpp  resource_manager.h  ubo.h  vulkan_command_context.cpp  vulkan_command_context.h  vulkan_device.cpp  vulkan_device.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_surface.cpp  vulkan_surface.h  vulkan_swapchain.cpp  vulkan_swapchain.h  window.h
src/engine/vulkan/: CMakeLists.txt  depth_buffer.cpp  depth_buffer.h  gpu_buffer.cpp  gpu_buffer.h  gpu_image.cpp  gpu_image.h  vulkan_command_context.cpp  vulkan_command_context.h  vulkan_command_pool.h  vulkan_depth_buffer.cpp  vulkan_descriptor_pool.cpp  vulkan_descriptor_pool.h  vulkan_device.cpp  vulkan_device.h  vulkan_frame_command_context.cpp  vulkan_frame_command_context.h  vulkan_gpu_buffer.cpp  vulkan_gpu_buffer.h  vulkan_gpu_image.cpp  vulkan_gpu_image.h  vulkan_immediate_command_context.cpp  vulkan_immediate_command_context.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_layout_transition.h  vulkan_pipeline_factory.cpp  vulkan_pipeline_factory.h  vulkan_pipeline_manager.cpp  vulkan_pipeline_manager.h  vulkan_pipeline_types.h  vulkan_render_sort_key.h  vulkan_render_utils.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_surface.cpp  vulkan_surface.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_utils.h  (+1 more)
src/graphics/: CMakeLists.txt  camera.cpp  camera.h  color.h  glm_wrapper.h  image.h  image_format.h  material.h  mesh.cpp  mesh.h  mesh_view.h  model.h  renderable.h  sampler.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h  texture2d_impl_vulkan.cpp  texture2d_impl_vulkan.h  types.h  utils.h  vertex.h
src/math/: rectangle.h  transform.h  utils.h
src/platform/: CMakeLists.txt  win32_window.cpp  win32_window.h
src/utils/: CMakeLists.txt  auto_release.h  error.h  exception.cpp  exception.h  formatter.h  hash.h  log.h
tests/: CMakeLists.txt  auto_release_tests.cpp  camera_tests.cpp  engine_error_tests.cpp  entity_tests.cpp  error_tests.cpp  exception_tests.cpp  file_tests.cpp  hash_tests.cpp  image_texture_resource_api_tests.cpp  pipeline_types_tests.cpp  render_sort_key_tests.cpp  tangent_generation_tests.cpp  transform_tests.cpp  unit_tests.cpp  vulkan_surface_tests.cpp  window_tests.cpp
